# teo_batc

./: README.md  README.md~
Teo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
Teo_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  teo.srdf
Teo_moveit_config/launch/: default_warehouse_db.launch  demo.launch  demo.launch~  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
teo_batc/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.md
teo_batc/include/worlds/: worlds.h
teo_batc/launch/: teo_cbr_startup.launch~  teo_trajectory.launch  teo_trajectory.launch~
teo_batc/src/: .trajectory.py.swp  central_node_trajectory.cpp  central_node_trajectory.cpp~
teo_batc/src/trajectory/: .main_trajectory.py.swo  .trajectory_base_solution.py.swo  .trajectory_memory.py.swo  main_trajectory.py  main_trajectory.py~  main_trajectory_dot(development).py  main_trajectory_py.py~  quaternion.py~  slerp.py  slerp.py~  trajectory_base_solution.py  trajectory_base_solution.py~  trajectory_base_solution_dot(development).py  trajectory_memory.py  trajectory_memory.py~  trajectory_memory_dot(development).py
teo_batc/srv/: communication_srv.srv~  trajectory_gen_srv.srv  trajectory_gen_srv.srv~
teo_description/meshes/arms/: elbow_pitch_comp.stl  shoulder_yaw_comp.stl  wrist_pitch_comp.stl
teo_description/urdf/: teo_humanoid(RAUL).urdf  teo_structure.urdf.xacro  teo_structure.urdf.xacro~
teo_description/urdf/arms/: arm(RAUL).urdf.xacro  arm(copy).urdf.xacro  arm(copy).urdf.xacro~  arm.urdf (copy).xacro  arm.urdf (copy).xacro~  arm.urdf.xacro  arm.urdf.xacro~  arms_vis(FREE).urdf.xacro  arms_vis.urdf.xacro~
teo_description/urdf/legs/: leg(RAUL).urdf.xacro  leg(copy).urdf.xacro  leg.urdf (copy).xacro~  leg.urdf.xacro  legs_vis(FREE).urdf.xacro
teo_description/urdf/others/: teo_constants.xacro
teo_description/urdf/torso/: torso(RAUL).urdf.xacro  torso(copy).urdf.xacro  torso.urdf.xacro~  torso_vis(FREE).urdf.xacro
teo_moveit/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.md
teo_moveit/include/: move_group_controller.h  move_group_controller.h~
teo_moveit/include/worlds/: Coffee_table_world.h~  array_world.h  array_world.h~  coffee_table_world.h  water_plant_world.h  water_plant_world.h~  worlds.h  worlds.h~
teo_moveit/launch/: teo_cbr_startup.launch  teo_cbr_startup.launch~  teo_task_generation_startup.launch~  teo_trajectory.launch~
teo_moveit/msg/: co_array.msg  communication.msg~  param.msg  param.msg~  param_array.msg~
teo_moveit/src/: atomic_task_memory.cpp  atomic_task_memory.cpp~  central_node.cpp  central_node.cpp~  environment_setup.cpp  move_group.cpp  pick.cpp~  pick_place_TEO(not used).cpp  pick_place_TEO.cpp~  trajectory.py~
teo_moveit/src/base_solution/: base_solution.cpp  base_solution.cpp~
teo_moveit/src/communication/: communication.cpp  communication.cpp~
teo_moveit/src/manipulation_examples/: drink_coffee_task.cpp  drink_coffee_task.cpp~  water_plant_task.cpp  water_plant_task.cpp~
teo_moveit/src/teo_task_template/: publisher_test.cpp  teo_task_template.cpp  teo_task_template.cpp~
teo_moveit/srv/: base_solution_srv.srv  communication_srv.srv  move_group_srv.srv~  pick_srv.srv~  place_srv.srv  place_srv.srv~  teo_task_template_srv.srv
teo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
teo_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  teo.srdf
teo_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
